--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   sqflite: ^1.3.1
   path_provider: ^1.6.11
   shared_preferences: ^0.5.8
+  firebase_auth: ^0.16.1
+  
   
   
 
@@ -53,8 +55,16 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/
-  #   - images/a_dot_ham.jpeg
+    - assets/polygon.png
+    - assets/arrow1.png
+    - assets/arrow3.png
+    - assets/arrow2.png
+    - assets/up_arrow.png
+    - assets/dojo2.png
+    - assets/dojo1.png
+    - assets/dojo1.png
+    - assets/D.png
+    - assets/arrow_down.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
